# octagram

./: .gitignore  CMakeLists.txt  README.md  generateAllPoints.sh  runAllConvexHull.sh  runAllTests.sh
graph/: times_plot.py
include/octagram/: point.hpp  polygon.hpp  segment.hpp  vector.hpp
include/octagram/algorithm/: convexhull.hpp
include/octagram/sampling/: generation.hpp  timer.hpp
include/octagram/util/: random.hpp
samples/times/hull_10/: GH_10000.txt  GH_100000.txt  GH_1000000.txt  GW_10000.txt  GW_100000.txt  GW_1000000.txt
samples/times/hull_30/: GH_100000.txt  GH_1000000.txt  GW_10000.txt  GW_1000000.txt
samples/times/hull_50/: GH_100000.txt  GH_1000000.txt  GW_1000.txt  GW_10000.txt  GW_1000000.txt
samples/times/hull_70/: GH_10000.txt  GH_100000.txt  GH_1000000.txt  GW_1000.txt  GW_10000.txt  GW_1000000.txt
samples/times/hull_90/: GH_10000.txt  GH_100000.txt  GH_1000000.txt  GW_1000.txt  GW_10000.txt  GW_1000000.txt
samples/times/random/: GH_100000.txt  GH_1000000.txt  GW_10000.txt  GW_1000000.txt
src/: CMakeLists.txt  polygon.cpp
src/algorithm/: CMakeLists.txt  convexhull.cpp
src/sampling/: CMakeLists.txt  generation.cpp  timer.cpp
src/util/: CMakeLists.txt  random.cpp  testRan.cpp
test/: CMakeLists.txt  PointClassTests[1]_include.cmake  PointClassTests[1]_tests.cmake  PolygonClassTests[1]_include.cmake  PolygonClassTests[1]_tests.cmake  SegmentClassTests[1]_include.cmake  SegmentClassTests[1]_tests.cmake  VectorClassTests[1]_include.cmake  VectorClassTests[1]_tests.cmake  testDummyPoint.cpp  testDummyPolygon.cpp  testFloatPoint.cpp  testFloatPolygon.cpp  testFloatSegment.cpp  testFloatVector.cpp  testIntPoint.cpp  testIntPolygon.cpp  testIntSegment.cpp  testIntVector.cpp  testPolygonControl.cpp
test/algorithm/: CMakeLists.txt  testConvexHull[1]_include.cmake  testConvexHull[1]_tests.cmake  testIntConvexHull.cpp  testTest.cpp  testTests[1]_include.cmake  testTests[1]_tests.cmake
test/sampling/: CMakeLists.txt  testGeneration.cpp  testGeneration[1]_include.cmake  testGeneration[1]_tests.cmake
